--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+
+/*=========================
+Custom CSS - Avdhesh Nigam
+===========================*/
+.container {
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  max-width: 500px;
+  border-radius: 5px;
+  padding: 12px 15px;
+  margin: 20px auto;
+}
+
+h1 {
+  font-size: 20px;
+  color:#000;
+  margin: 0 0 15px 0;
+  padding: 0;
+}
+h2 {
+  font-size: 17px;
+  color:#000;
+  margin: 0 0 15px 0;
+  padding: 0;
+}
+
+button{
+  font-size: 15px;
+  border: 1px solid rgb(0, 16, 165);
+  padding: 5px 12px;
+  color:#fff;
+  border-radius: 3px;
+  background-color: #2320c7;
+}
+
+
